# fastapi-scs

./: Dockerfile  LICENSE  README.md  api.py  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
fastapi_scs/: exceptions.py  main.py  middleware.py  responses.py  service.py
fastapi_scs/router/: conesearch_router.py
postgres-q3c/: Dockerfile
postgres-q3c/init-db/: init.sql
